# kaja-callback-macro

./: Cargo.toml  README.md
src/: lib.rs
tests/: htmlelementarg.rs
