[package]
name = "kaja-callback-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
gloo = "0.12.0"

[dev-dependencies]
# Dependencies required for compiling integration tests that use the generated wasm bindings
kaja-html-macro = "1.0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
inventory = "0.1"
wasm-bindgen-test = "0.3"
