[package]
name = "kaja-callback-macro"
version = "1.0.0"
edition = "2024"
description = "Callback macro for kaja-web"
license = "MIT"
repository = "https://github.com/johanmattssonm/kaja-callback-macro"
readme = "README.md"
keywords = ["web", "wasm", "rust", "webassembly", "frontend"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
gloo = "0.12.0"

[dev-dependencies]
kaja-html-macro = "1.0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
inventory = "0.1"
wasm-bindgen-test = "0.3"
