[package]
name = "kaja-callback-macro"
version = "1.0.2"
edition = "2024"
description = "Callback macro for kaja-web"
license = "MIT"
repository = "https://github.com/johanmattssonm/kaja-callback-macro"
readme = "README.md"
keywords = ["web", "wasm", "rust", "webassembly", "frontend"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
gloo = "0.12.0"

[dev-dependencies]
gloo = "0.12.0"
gloo-console = "0.4.0"
kaja-html-macro = "1.0.5"
wasm-bindgen = "0.2.122"
web-sys = { version = "0.3.99", features = ["Document", "HtmlDocument", "Element", "HtmlElement", "HtmlInputElement", "NodeList"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
inventory = "0.3.24"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.72"
